k8s/0_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyter-notebook
  namespace:
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
